[gd_scene load_steps=4 format=3 uid="uid://b6jmqgph1skge"]

[ext_resource type="Script" path="res://game/entities/ui/hud/health_bars.gd" id="1_ynaap"]
[ext_resource type="StyleBox" uid="uid://dt5d8ow6vcsuf" path="res://game/entities/ui/hud/health_pip_positive.tres" id="2_7rfk4"]
[ext_resource type="StyleBox" uid="uid://uuliwjv8qpt8" path="res://game/entities/ui/hud/health_pip_negative.tres" id="3_aktgt"]

[node name="HealthBars" type="HBoxContainer"]
custom_minimum_size = Vector2(0, 75)
size_flags_horizontal = 8
size_flags_vertical = 2
script = ExtResource("1_ynaap")

[node name="HealthPip1" type="Panel" parent="."]
custom_minimum_size = Vector2(15, 0)
layout_mode = 2
theme_override_styles/panel = ExtResource("2_7rfk4")

[node name="HealthPip2" type="Panel" parent="."]
custom_minimum_size = Vector2(15, 0)
layout_mode = 2
theme_override_styles/panel = ExtResource("2_7rfk4")

[node name="HealthPip3" type="Panel" parent="."]
custom_minimum_size = Vector2(15, 0)
layout_mode = 2
theme_override_styles/panel = ExtResource("2_7rfk4")

[node name="HealthPip4" type="Panel" parent="."]
custom_minimum_size = Vector2(15, 0)
layout_mode = 2
theme_override_styles/panel = ExtResource("2_7rfk4")

[node name="HealthPip5" type="Panel" parent="."]
custom_minimum_size = Vector2(15, 0)
layout_mode = 2
theme_override_styles/panel = ExtResource("3_aktgt")

[node name="HealthPip6" type="Panel" parent="."]
custom_minimum_size = Vector2(15, 0)
layout_mode = 2
theme_override_styles/panel = ExtResource("3_aktgt")

[node name="HealthPip7" type="Panel" parent="."]
custom_minimum_size = Vector2(15, 0)
layout_mode = 2
theme_override_styles/panel = ExtResource("3_aktgt")

[node name="HealthPip8" type="Panel" parent="."]
custom_minimum_size = Vector2(15, 0)
layout_mode = 2
theme_override_styles/panel = ExtResource("3_aktgt")

[node name="HealthPip9" type="Panel" parent="."]
custom_minimum_size = Vector2(15, 0)
layout_mode = 2
theme_override_styles/panel = ExtResource("3_aktgt")

[node name="HealthPip10" type="Panel" parent="."]
custom_minimum_size = Vector2(15, 0)
layout_mode = 2
theme_override_styles/panel = ExtResource("3_aktgt")
